# executable-worker

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
src/: main.cpp  worker.cpp  worker.h
tests/: CMakeLists.txt  dummy_tests.cpp
